Remove boilerplate with very basic intro page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,21 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Join The Community
 
-## What is Nextra?
+**nwmap** is a New World Faction Territory Map Project that helps to bring a visual understanding of each server.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## Subscribe to server updates
 
-## Documentation
+import Image from "next/image";
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+<Image
+  src="/nwmap.png"
+  alt="Hello"
+  width={506}
+  height={297}
+  style={{ margin: "10px 0" }}
+/>
+
+[Join Discord](https://discord.gg/MRMTwtB3Th)
+
+## Show influence map
+
+On [aeternum-map.gg](https://aeternum-map.gg/?section=influences), you can find the influence maps per server.
