Add all servers

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,18 +4,27 @@
 
 ## Subscribe to server updates
 
+You like to get up-to-date of server changes? [Join Discord](https://discord.gg/MRMTwtB3Th) and subscribe to the server updates.
+
 import Image from "next/image";
 
 <Image
   src="/nwmap.png"
-  alt="Hello"
+  alt="Discord preview"
   width={506}
   height={297}
   style={{ margin: "10px 0" }}
 />
 
-[Join Discord](https://discord.gg/MRMTwtB3Th)
-
 ## Show influence map
 
-On [aeternum-map.gg](https://aeternum-map.gg/?section=influences), you can find the influence maps per server.
+On [Aeternum Map](https://aeternum-map.gg/?section=influences), you can find the influence maps per server.  
+You can contribute by scanning the factions influence map on your server with the [Aeternum Map app](https://www.overwolf.com/app/Leon_Machens-Aeternum_Map). The overlay is visible in-game and usable with a simple click.
+
+<Image
+  src="/influence-preview.webp"
+  alt="Screenshot tool"
+  width={640}
+  height={587}
+  style={{ margin: "10px 0" }}
+/>
