Added server Discord links to server pages

--- a/pages/eu-central/abaton.mdx
+++ b/pages/eu-central/abaton.mdx
@@ -8,4 +8,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Abaton server Discord](https://discord.gg/Dj5a3zabcW)
+* [Abaton's Settlers Discord](https://discord.gg/YH82UFXAyq)
