--- a/pages/eu-central/apophis.mdx
+++ b/pages/eu-central/apophis.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Apophis server Discord](https://discord.gg/9kGyTJaTzr)
