--- a/pages/eu-central/artemis.mdx
+++ b/pages/eu-central/artemis.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Artemis server Discord](https://discord.gg/RPx5HAUwGB)
