--- a/pages/eu-central/caer-sidi.mdx
+++ b/pages/eu-central/caer-sidi.mdx
@@ -8,4 +8,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Caer Sidi server Discord (English)](https://discord.gg/prCTxfENe2)
+* [Caer Sidi server Discord (French)](https://discord.gg/dsFJGk7u9C)
