--- a/pages/eu-central/cleopatra.mdx
+++ b/pages/eu-central/cleopatra.mdx
@@ -8,4 +8,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Cleopatra server Discord](https://discord.gg/UfuZ88PhVp)
+* [Cleopatra community Discord](https://discord.gg/p5MEQrgjUc)
