--- a/pages/eu-central/dry-tree.mdx
+++ b/pages/eu-central/dry-tree.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Dry Tree server Discord](https://discord.gg/JvAk7vppEv)
