--- a/pages/eu-central/galahad.mdx
+++ b/pages/eu-central/galahad.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Galahad server Discord](https://discord.gg/CKFW39HNxR)
