--- a/pages/eu-central/gilgamesh.mdx
+++ b/pages/eu-central/gilgamesh.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Gilgamesh server Discord](https://discord.gg/ASHjaE4FBH)
