--- a/pages/eu-central/niflheim.mdx
+++ b/pages/eu-central/niflheim.mdx
@@ -8,4 +8,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Niflheim server Discord](https://discord.gg/yRw6TNfDNd)
+* [Nifilheim community Discord](https://discord.gg/Hnuzqh5Nj3)
