--- a/pages/eu-central/tartarus.mdx
+++ b/pages/eu-central/tartarus.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Tartarus server Discord](https://discord.gg/vDQBGUksRa)
