--- a/pages/eu-central/tir-na-nog.mdx
+++ b/pages/eu-central/tir-na-nog.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Tir Na Nog server Discord](https://discord.gg/ygsW4qDdQ8)
