--- a/pages/us-east/amarah.mdx
+++ b/pages/us-east/amarah.mdx
@@ -8,4 +8,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Amarah server Discord](https://discord.gg/RUTjb374tX)
+* [Amarah Syndicate Discord](https://discord.gg/Dny5EM6em5)
