--- a/pages/us-east/orofena.mdx
+++ b/pages/us-east/orofena.mdx
@@ -8,4 +8,8 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Orofena server Discord](https://discord.gg/8SrCrxvvjz)
+* [Orofena Covenant Discord 1](https://discord.gg/BVE5kS6nfT)
+* [Orofena Covenant Discord 2](https://discord.gg/T47N4p85xV)
+* [Orofena Marauder Discord](https://discord.gg/UxTAz4PkE8)
+* [Orofena Syndicate Discord](https://discord.gg/qEJykzbgsK)
