--- a/pages/eu-central/imhotep.mdx
+++ b/pages/eu-central/imhotep.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Imhotep server Discord](https://discord.gg/u5KsKCvvrj)
