--- a/pages/sa-east/mayari.mdx
+++ b/pages/sa-east/mayari.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [South America servers Discord](https://discord.gg/newworldsa)
