--- a/pages/us-east/heliopolis.mdx
+++ b/pages/us-east/heliopolis.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Heliopolis server Discord](https://discord.gg/YjSJxGjqS7)
