--- a/pages/us-east/valhalla.mdx
+++ b/pages/us-east/valhalla.mdx
@@ -8,4 +8,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Valhalla server Discord](https://discord.gg/nw-valhalla)
