Add discord embeds for all servers

--- a/pages/ap-southeast/delos.mdx
+++ b/pages/ap-southeast/delos.mdx
@@ -1,5 +1,11 @@
 # Delos
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015699151813607555" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
