--- a/pages/ap-southeast/eridu.mdx
+++ b/pages/ap-southeast/eridu.mdx
@@ -1,5 +1,11 @@
 # Eridu
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1019782142995202068" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
