--- a/pages/ap-southeast/primordial.mdx
+++ b/pages/ap-southeast/primordial.mdx
@@ -1,5 +1,11 @@
 # Primordial
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037415852892499968" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
