--- a/pages/ap-southeast/sutekh.mdx
+++ b/pages/ap-southeast/sutekh.mdx
@@ -1,5 +1,11 @@
 # Sutekh
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1035316254115909692" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
