--- a/pages/eu-central/aaru.mdx
+++ b/pages/eu-central/aaru.mdx
@@ -1,5 +1,11 @@
 # Aaru
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015699393778815076" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Aaru server Discord](https://discord.gg/KCVDG9Rtuq)
+- [Aaru server Discord](https://discord.gg/KCVDG9Rtuq)
