--- a/pages/eu-central/abaton.mdx
+++ b/pages/eu-central/abaton.mdx
@@ -1,5 +1,11 @@
 # Abaton
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015698116848140418" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,5 +14,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Abaton server Discord](https://discord.gg/Dj5a3zabcW)
-* [Abaton's Settlers Discord](https://discord.gg/YH82UFXAyq)
+- [Abaton server Discord](https://discord.gg/Dj5a3zabcW)
+- [Abaton's Settlers Discord](https://discord.gg/YH82UFXAyq)
