--- a/pages/eu-central/artemis.mdx
+++ b/pages/eu-central/artemis.mdx
@@ -1,5 +1,11 @@
 # Artemis
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1035315339648585782" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Artemis server Discord](https://discord.gg/RPx5HAUwGB)
+- [Artemis server Discord](https://discord.gg/RPx5HAUwGB)
