--- a/pages/eu-central/asgard.mdx
+++ b/pages/eu-central/asgard.mdx
@@ -1,5 +1,11 @@
 # Asgard
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1025091869350314027" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Asgard server Discord](https://discord.gg/Tb3qUjDsKU)
+- [Asgard server Discord](https://discord.gg/Tb3qUjDsKU)
