--- a/pages/eu-central/barri.mdx
+++ b/pages/eu-central/barri.mdx
@@ -1,5 +1,11 @@
 # Barri
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015698167720853635" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Barri server Discord](https://discord.gg/FSYA3ajrXn)
+- [Barri server Discord](https://discord.gg/FSYA3ajrXn)
