--- a/pages/eu-central/cleopatra.mdx
+++ b/pages/eu-central/cleopatra.mdx
@@ -1,5 +1,11 @@
 # Cleopatra
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1035315770206466078" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,5 +14,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Cleopatra server Discord](https://discord.gg/UfuZ88PhVp)
-* [Cleopatra community Discord](https://discord.gg/p5MEQrgjUc)
+- [Cleopatra server Discord](https://discord.gg/UfuZ88PhVp)
+- [Cleopatra community Discord](https://discord.gg/p5MEQrgjUc)
