--- a/pages/eu-central/crassus.mdx
+++ b/pages/eu-central/crassus.mdx
@@ -1,5 +1,11 @@
 # Crassus
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037415598554103900" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
