--- a/pages/eu-central/dracul.mdx
+++ b/pages/eu-central/dracul.mdx
@@ -1,5 +1,11 @@
 # Dracul
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037561826566750237" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
