--- a/pages/eu-central/dry-tree.mdx
+++ b/pages/eu-central/dry-tree.mdx
@@ -1,5 +1,11 @@
 # Dry Tree
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015698209189937234" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Dry Tree server Discord](https://discord.gg/JvAk7vppEv)
+- [Dry Tree server Discord](https://discord.gg/JvAk7vppEv)
