--- a/pages/eu-central/fate.mdx
+++ b/pages/eu-central/fate.mdx
@@ -1,5 +1,11 @@
 # Fate
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037558730268614787" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Fate server Discord](https://discord.gg/tth6FuN26X)
+- [Fate server Discord](https://discord.gg/tth6FuN26X)
