--- a/pages/eu-central/gawain.mdx
+++ b/pages/eu-central/gawain.mdx
@@ -1,5 +1,11 @@
 # Gawain
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1035315456992608357" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Gawain server Discord](https://discord.gg/RKAFpNGB5U)
+- [Gawain server Discord](https://discord.gg/RKAFpNGB5U)
