--- a/pages/eu-central/kronos.mdx
+++ b/pages/eu-central/kronos.mdx
@@ -1,5 +1,11 @@
 # Kronos
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037558898376310834" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Kronos server Discord](https://discord.gg/nHhcyxhCpX)
+- [Kronos server Discord](https://discord.gg/nHhcyxhCpX)
