--- a/pages/eu-central/niflheim.mdx
+++ b/pages/eu-central/niflheim.mdx
@@ -1,5 +1,11 @@
 # Niflheim
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1029522217941348464" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,5 +14,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Niflheim server Discord](https://discord.gg/yRw6TNfDNd)
-* [Nifilheim community Discord](https://discord.gg/Hnuzqh5Nj3)
+- [Niflheim server Discord](https://discord.gg/yRw6TNfDNd)
+- [Nifilheim community Discord](https://discord.gg/Hnuzqh5Nj3)
