--- a/pages/eu-central/nysa.mdx
+++ b/pages/eu-central/nysa.mdx
@@ -1,5 +1,11 @@
 # Nysa
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015699202724085840" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Nysa server Discord](https://discord.gg/upPJ5XMPVa)
+- [Nysa server Discord](https://discord.gg/upPJ5XMPVa)
