--- a/pages/eu-central/nyx.mdx
+++ b/pages/eu-central/nyx.mdx
@@ -1,5 +1,11 @@
 # Nyx
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037559089762422874" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Nyx server Discord](https://discord.gg/CgQpZtuzSX)
+- [Nyx server Discord](https://discord.gg/CgQpZtuzSX)
