--- a/pages/eu-central/tir-na-nog.mdx
+++ b/pages/eu-central/tir-na-nog.mdx
@@ -1,5 +1,11 @@
 # Tir Na Nog
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1019673875048579122" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Tir Na Nog server Discord](https://discord.gg/ygsW4qDdQ8)
+- [Tir Na Nog server Discord](https://discord.gg/ygsW4qDdQ8)
