--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,10 +2,6 @@
 
 **nwmap** is a New World Faction Territory Map Project that helps to bring a visual understanding of each server.
 
-## Subscribe to server updates
-
-You like to get up-to-date of server changes? [Join Discord](https://discord.gg/MRMTwtB3Th) and subscribe to the server updates.
-
 import Image from "next/image";
 
 <Image
@@ -15,6 +11,14 @@ import Image from "next/image";
   height={297}
   style={{ margin: "10px 0" }}
 />
+
+## Subscribe to server updates
+
+You like to get up-to-date of server changes? [Join Discord](https://discord.gg/MRMTwtB3Th) and [subscribe](https://support.discord.com/hc/en-us/articles/360028384531-Channel-Following-FAQ) to the server updates.
+
+import Updates from "components/Updates";
+
+<Updates channel="1016436208592748574" hideTip />
 
 ## Show influence map
 
