--- a/pages/sa-east/nomad.mdx
+++ b/pages/sa-east/nomad.mdx
@@ -1,5 +1,11 @@
 # Nomad
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037415791567568968" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [South America servers Discord](https://discord.gg/newworldsa)
+- [South America servers Discord](https://discord.gg/newworldsa)
