--- a/pages/us-east/amarah.mdx
+++ b/pages/us-east/amarah.mdx
@@ -1,5 +1,11 @@
 # Amarah
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1035314847610568724" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,5 +14,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Amarah server Discord](https://discord.gg/RUTjb374tX)
-* [Amarah Syndicate Discord](https://discord.gg/Dny5EM6em5)
+- [Amarah server Discord](https://discord.gg/RUTjb374tX)
+- [Amarah Syndicate Discord](https://discord.gg/Dny5EM6em5)
