--- a/pages/us-east/castle-of-steel.mdx
+++ b/pages/us-east/castle-of-steel.mdx
@@ -1,5 +1,11 @@
 # Castle of Steel
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015697465132994611" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
