--- a/pages/us-east/death.mdx
+++ b/pages/us-east/death.mdx
@@ -1,5 +1,11 @@
 # Death
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037561563252543518" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
