--- a/pages/us-east/devourer.mdx
+++ b/pages/us-east/devourer.mdx
@@ -1,5 +1,11 @@
 # Devourer
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1035314737111629904" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
