--- a/pages/us-east/lilith.mdx
+++ b/pages/us-east/lilith.mdx
@@ -1,5 +1,11 @@
 # Lilith
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037558093913018479" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
