--- a/pages/us-east/maramma.mdx
+++ b/pages/us-east/maramma.mdx
@@ -1,5 +1,11 @@
 # Maramma
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015697415136870453" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Maramma server Discord](https://discord.gg/maramma)
+- [Maramma server Discord](https://discord.gg/maramma)
