--- a/pages/us-east/olympus.mdx
+++ b/pages/us-east/olympus.mdx
@@ -1,5 +1,11 @@
 # Olympus
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1019673762662191156" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
