--- a/pages/us-east/orofena.mdx
+++ b/pages/us-east/orofena.mdx
@@ -1,5 +1,11 @@
 # Orofena
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015697334987935846" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,8 +14,8 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Orofena server Discord](https://discord.gg/8SrCrxvvjz)
-* [Orofena Covenant Discord 1](https://discord.gg/BVE5kS6nfT)
-* [Orofena Covenant Discord 2](https://discord.gg/T47N4p85xV)
-* [Orofena Marauder Discord](https://discord.gg/UxTAz4PkE8)
-* [Orofena Syndicate Discord](https://discord.gg/qEJykzbgsK)
+- [Orofena server Discord](https://discord.gg/8SrCrxvvjz)
+- [Orofena Covenant Discord 1](https://discord.gg/BVE5kS6nfT)
+- [Orofena Covenant Discord 2](https://discord.gg/T47N4p85xV)
+- [Orofena Marauder Discord](https://discord.gg/UxTAz4PkE8)
+- [Orofena Syndicate Discord](https://discord.gg/qEJykzbgsK)
