--- a/pages/us-east/seer.mdx
+++ b/pages/us-east/seer.mdx
@@ -1,5 +1,11 @@
 # Seer
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037558012514160720" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Seer server Discord](https://discord.gg/54MFXXcbk3)
+- [Seer server Discord](https://discord.gg/54MFXXcbk3)
