--- a/pages/us-east/sentinel.mdx
+++ b/pages/us-east/sentinel.mdx
@@ -1,5 +1,11 @@
 # Sentinel
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037415422712107018" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
