--- a/pages/us-east/valhalla.mdx
+++ b/pages/us-east/valhalla.mdx
@@ -1,5 +1,11 @@
 # Valhalla
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015697383117553724" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Valhalla server Discord](https://discord.gg/nw-valhalla)
+- [Valhalla server Discord](https://discord.gg/nw-valhalla)
