--- a/pages/us-west/el-dorado.mdx
+++ b/pages/us-west/el-dorado.mdx
@@ -1,5 +1,11 @@
 # El Dorado
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015697807690186823" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
