--- a/pages/us-west/isabella.mdx
+++ b/pages/us-west/isabella.mdx
@@ -1,5 +1,11 @@
 # Isabella
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037415508921815162" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
