--- a/pages/us-west/titan.mdx
+++ b/pages/us-west/titan.mdx
@@ -1,5 +1,11 @@
 # Titan
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037561664939245639" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
