--- a/pages/eu-central/apophis.mdx
+++ b/pages/eu-central/apophis.mdx
@@ -1,5 +1,11 @@
 # Apophis
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1035315577578864690" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Apophis server Discord](https://discord.gg/9kGyTJaTzr)
+- [Apophis server Discord](https://discord.gg/9kGyTJaTzr)
