--- a/pages/eu-central/caer-sidi.mdx
+++ b/pages/eu-central/caer-sidi.mdx
@@ -1,5 +1,11 @@
 # Caer Sidi
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1019783654299422841" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,5 +14,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Caer Sidi server Discord (English)](https://discord.gg/prCTxfENe2)
-* [Caer Sidi server Discord (French)](https://discord.gg/dsFJGk7u9C)
+- [Caer Sidi server Discord (English)](https://discord.gg/prCTxfENe2)
+- [Caer Sidi server Discord (French)](https://discord.gg/dsFJGk7u9C)
