--- a/pages/eu-central/galahad.mdx
+++ b/pages/eu-central/galahad.mdx
@@ -1,5 +1,11 @@
 # Galahad
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037558939530833930" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Galahad server Discord](https://discord.gg/CKFW39HNxR)
+- [Galahad server Discord](https://discord.gg/CKFW39HNxR)
