--- a/pages/eu-central/gilgamesh.mdx
+++ b/pages/eu-central/gilgamesh.mdx
@@ -1,5 +1,11 @@
 # Gilgamesh
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037559125552402503" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Gilgamesh server Discord](https://discord.gg/ASHjaE4FBH)
+- [Gilgamesh server Discord](https://discord.gg/ASHjaE4FBH)
