--- a/pages/eu-central/imhotep.mdx
+++ b/pages/eu-central/imhotep.mdx
@@ -1,5 +1,11 @@
 # Imhotep
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037415706117017630" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Imhotep server Discord](https://discord.gg/u5KsKCvvrj)
+- [Imhotep server Discord](https://discord.gg/u5KsKCvvrj)
