--- a/pages/eu-central/jupiter.mdx
+++ b/pages/eu-central/jupiter.mdx
@@ -1,5 +1,11 @@
 # Jupiter
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037558510596132905" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
