--- a/pages/eu-central/morgaine.mdx
+++ b/pages/eu-central/morgaine.mdx
@@ -1,5 +1,11 @@
 # Morgaine
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037558453260005387" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
