--- a/pages/eu-central/tartarus.mdx
+++ b/pages/eu-central/tartarus.mdx
@@ -1,5 +1,11 @@
 # Tartarus
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015699344583835768" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Tartarus server Discord](https://discord.gg/vDQBGUksRa)
+- [Tartarus server Discord](https://discord.gg/vDQBGUksRa)
