--- a/pages/us-east/avalon.mdx
+++ b/pages/us-east/avalon.mdx
@@ -1,5 +1,11 @@
 # Avalon
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037557944377679982" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Avalon server Discord](https://discord.gg/Ap3S3Rz6QR)
+- [Avalon server Discord](https://discord.gg/Ap3S3Rz6QR)
