--- a/pages/us-east/heliopolis.mdx
+++ b/pages/us-east/heliopolis.mdx
@@ -1,5 +1,11 @@
 # Heliopolis
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1031644643668021299" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
@@ -8,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Heliopolis server Discord](https://discord.gg/YjSJxGjqS7)
+- [Heliopolis server Discord](https://discord.gg/YjSJxGjqS7)
