--- a/pages/us-east/minotaur.mdx
+++ b/pages/us-east/minotaur.mdx
@@ -1,5 +1,11 @@
 # Minotaur
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1037558205385023518" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
