--- a/pages/us-west/yggdrasil.mdx
+++ b/pages/us-west/yggdrasil.mdx
@@ -1,5 +1,11 @@
 # Yggdrasil
 
+## Updates
+
+import Updates from "components/Updates";
+
+<Updates channel="1015697843643760640" />
+
 ## Latest influence
 
 import AeternumMap from "components/AeternumMap";
