Add The Avalon Syndicate

--- a/pages/us-east/avalon.mdx
+++ b/pages/us-east/avalon.mdx
@@ -15,3 +15,4 @@ import AeternumMap from "components/AeternumMap";
 ## Communities
 
 - [Avalon server Discord](https://discord.gg/Ap3S3Rz6QR)
+- [The Avalon Syndicate](https://discord.gg/PwvBjm7SVB)
