Added US West Isabella community site

--- a/pages/us-west/isabella.mdx
+++ b/pages/us-west/isabella.mdx
@@ -14,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+* [Isabella server Discord](https://discord.gg/DdTnVR3D)
