Removed merged server pages and updated Discords

--- a/pages/eu-central/abaton.mdx
+++ b/pages/eu-central/abaton.mdx
@@ -14,5 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-- [Abaton server Discord](https://discord.gg/Dj5a3zabcW)
-- [Abaton's Settlers Discord](https://discord.gg/YH82UFXAyq)
+- [Abaton server Discord](https://discord.gg/YH82UFXAyq)
