--- a/pages/eu-central/kronos.mdx
+++ b/pages/eu-central/kronos.mdx
@@ -14,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-- [Kronos server Discord](https://discord.gg/nHhcyxhCpX)
+- [Kronos server Discord](https://discord.gg/RKAFpNGB5U)
