--- a/pages/eu-central/cleopatra.mdx
+++ b/pages/eu-central/cleopatra.mdx
@@ -14,5 +14,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-- [Cleopatra server Discord](https://discord.gg/UfuZ88PhVp)
-- [Cleopatra community Discord](https://discord.gg/p5MEQrgjUc)
+- [Cleopatra server Discord (French)](https://discord.gg/UfuZ88PhVp)
+- [Cleopatra server Discord (English)](https://discord.gg/CKFW39HNxR)
