--- a/pages/eu-central/nyx.mdx
+++ b/pages/eu-central/nyx.mdx
@@ -14,4 +14,5 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-- [Nyx server Discord](https://discord.gg/CgQpZtuzSX)
+- [Nyx server Discord (English)](https://discord.gg/nyxeu)
+- [Nyx server Discord (French)](https://discord.gg/ASHjaE4FBH)
