Added Castle of Steel server Discord

--- a/pages/us-east/castle-of-steel.mdx
+++ b/pages/us-east/castle-of-steel.mdx
@@ -14,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-TBA
+- [Castle of Steel server Discord](https://discord.gg/HtdVNBW3Qm)
