Transfer to THGL Discord

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
-# Join The Community
+# Influence Updates for New World
 
-**nwmap** is a New World Faction Territory Map Project that helps to bring a visual understanding of each server.
+This is a Discord community that helps to bring a visual understanding of each server's Influence. It's connected to the [Aeternum Map](https://aeternum-map.gg) and part of part of [The Hidden Gaming Lair](https://www.th.gl/).
 
 import Image from "next/image";
 
@@ -14,11 +14,11 @@ import Image from "next/image";
 
 ## Subscribe to server updates
 
-You like to get up-to-date of server changes? [Join Discord](https://discord.gg/MRMTwtB3Th) and [subscribe](https://support.discord.com/hc/en-us/articles/360028384531-Channel-Following-FAQ) to the server updates.
+You like to get up-to-date of server changes? [Join Discord](https://discord.gg/NTZu8Px) and [subscribe](https://support.discord.com/hc/en-us/articles/360028384531-Channel-Following-FAQ) to the server updates.
 
 import Updates from "components/Updates";
 
-<Updates channel="1016436208592748574" hideTip />
+<Updates channel="1105049554799312917" hideTip />
 
 ## Show influence map
 
@@ -32,3 +32,4 @@ You can contribute by scanning the factions influence map on your server with th
   height={587}
   style={{ margin: "10px 0" }}
 />
+https://discord.gg/NTZu8Px
