--- a/pages/us-west/isabella.mdx
+++ b/pages/us-west/isabella.mdx
@@ -4,7 +4,7 @@
 
 import Updates from "components/Updates";
 
-<Updates channel="1037415508921815162" />
+<Updates channel="1105059963564478545" />
 
 ## Latest influence
 
@@ -14,4 +14,4 @@ import AeternumMap from "components/AeternumMap";
 
 ## Communities
 
-* [Isabella server Discord](https://discord.gg/DdTnVR3D)
+- [Isabella server Discord](https://discord.gg/DdTnVR3D)
