--- a/pages/eu-central/abaton.mdx
+++ b/pages/eu-central/abaton.mdx
@@ -15,3 +15,4 @@ import AeternumMap from "components/AeternumMap";
 ## Communities
 
 - [Abaton server Discord](https://discord.gg/YH82UFXAyq)
+- [Abaton server Discord de la communauté FR](https://discord.gg/nDPyDVpvTP)
